--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="build/bundle.js"></script>
+<script src="/build/bundle.js"></script>
 </body>
 </html>
